mdapioutput/objects/CTCPG__Product__c.object
<CustomObject>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CT_Products</fullName>
                    <label>CT Products</label>
                </value>
                <value>
                    <fullName>Valio</fullName>
                </value>
                <value>
                    <fullName>Actimel</fullName>
                </value>
                <value>
                    <fullName>Activia</fullName>
                </value>
                <value>
                    <fullName>Bio Max</fullName>
                </value>
                <value>
                    <fullName>Fruttis</fullName>
                </value>
                <value>
                    <fullName>Danone</fullName>
                </value>
                <value>
                    <fullName>Danissimo</fullName>
                </value>
                <value>
                    <fullName>Parmalat</fullName>
                </value>
                <value>
                    <fullName>Bio Balance</fullName>
                </value>
                <value>
                    <fullName>Edelweiss</fullName>
                </value>
                <value>
                    <fullName>Ermigurt</fullName>
                </value>
                <value>
                    <fullName>Mr. Ricco</fullName>
                </value>
                <value>
                    <fullName>Epica</fullName>
                </value>
                <value>
                    <fullName>Nestle</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExternalID__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image_URL__c</fullName>
        <label>Image URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Largeur_du_produit_en_cm__c</fullName>
        <defaultValue>10</defaultValue>
        <label>Shelf Length</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PriceAudit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Need Price Audit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProductFamily__c</fullName>
        <label>Product Family</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SFDC_apps</fullName>
                    <label>SFDC apps</label>
                </value>
                <value>
                    <fullName>Mobile_apps</fullName>
                    <label>Mobile apps</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Image__c</fullName>
        <formula>IMAGE( Image_URL__c , &quot;no image&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rayon__c</fullName>
        <label>Rayon</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Audit_category_1</fullName>
                    <label>Audit category 1</label>
                </value>
                <value>
                    <fullName>Audit_category_2</fullName>
                    <label>Audit category 2</label>
                </value>
                <value>
                    <fullName>Audit_category_3</fullName>
                    <label>Audit category 3</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>